@@ -9,6 +9,7 @@ WISH: OnTheSpot editing, or maybe switch to miiiiiiif
 WISH: just for fun, do shade and tint with XRender.
 WISH: support tex fonts
 
+TODO: urxvt::popup is undocumented
 	- added sections for DISTRIBUTION MAINTAINERS and about
           SETUID/SETGID to the FAQ.
         - selection, searchable-scrollback, selection-popup and
@@ -27,6 +28,8 @@ WISH: support tex fonts
           side effect, it also gets rid of XGetDefault calls.
         - free one of the cursors, fixes a small memory leak.
         - built-in (as opposed to terminfos) visual bell was broken/too fast.
+        - applied minor cleanups by Ladislav Michnovic.
+        - applied better configure support for openpty by Emanuele Giaquinta.
 
 6.3  Wed Jan  4 22:37:10 CET 2006
         - SECURITY FIX: on systems using openpty, permissions were
